--- a/wiki/ReleaseNotes1_2.wiki
+++ b/wiki/ReleaseNotes1_2.wiki
@@ -1,12 +1,8 @@
 #summary Release notes for 1.2 version.
 
-We are proud to present a new Python package:
+We are proud to release a new package for deconvolving 3D microscope images iocbio.microscope. It is a part of an open-source software project iocbio from the Laboratory of Systems Biology in the Institute of Cybernetics at Tallinn Technical University (http://sysbio.ioc.ee).
 
-  iocbio.microscope - a Python package for deconvolving 3D microscope images
-
-that is part of an open-source software iocbio from the Laboratory of Systems Biology.
-
-Iocbio.microscope software package allows to deconvolve microscope images. In addition to the deconvolution program, the package includes of the set of tools that are required for processing the images, estimation of point spread function (PSF) and visualizing the results. This software is written in Python and is released with an open-source license (see below). 
+Iocbio.microscope software package allows to deconvolve microscope images. In addition to the deconvolution program, the package includes the set of tools that is required for processing images, estimation of point spread function (PSF) and visualizing the results. This software is written in Python and is released with an open-source license (BSD). 
 
 Homepage: http://code.google.com/p/iocbio/wiki/IOCBioMicroscope
 
@@ -20,11 +16,10 @@ Iocbio is developed under Linux (ubuntu) but will also run under Windows
 (we provide installer for Windows users to ease the process of setting
 up the iocbio software as well as its prerequisites).
 
-License and reference
----------------------
-
-The iocbio package is distributed using an open-source license (BSD). In addition to the terms of the license, we ask to acknowledge the use of the package in scientific articles by citing the following paper:
+Mathematical background of implemented deconvolution algorithm, notes and guidelines on selection of parameters for deconvolution and application to real-life images are described in a recent paper
 
 Laasmaa, M, Vendelin, M, Peterson, P (2011). Application of regularized Richardson-Lucy algorithm for deconvolution of confocal microscopy images. J. Microscopy. Volume 243, Issue 2, pages 124–140, August 2011:
+http://onlinelibrary.wiley.com/doi/10.1111/j.1365-2818.2011.03486.x/full
 
-  http://onlinelibrary.wiley.com/doi/10.1111/j.1365-2818.2011.03486.x/abstract
+
+Pearu Peterson
