--- a/wiki/IOCBioMicroscope.wiki
+++ b/wiki/IOCBioMicroscope.wiki
@@ -36,7 +36,7 @@ The sources of iocbio.microscope is available via [http://code.google.com/p/iocb
 
 To ease the process of installing required software and iocbio package for Windows users, we provide installers for various Python versions (if you don't have any installed, just pick one from the list):
 
-  * [http://sysbio.ioc.ee/download/software/binaries/latest/iocbio_installer_py26.exe iocbio_installer_py26.exe]
+  * [http://code.google.com/p/iocbio/downloads/detail?name=iocbio_installer_py26.exe iocbio_installer_py26.exe]
 
 The installer should be run as Administrator. So, you must download the installer, save it to disk, and then right-click it and choose {{{"Run as administrator"}}} menu item.
 
