Edited wiki page IOCBioSarcomereLength through web user interface.

--- a/wiki/IOCBioSarcomereLength.wiki
+++ b/wiki/IOCBioSarcomereLength.wiki
@@ -8,3 +8,13 @@ Pearu Peterson
 November 28, 2011
 
 }}}
+
+= Introduction =
+
+IOCBio provides a C library `libfperiod` and Python package `iocbio.fperiod` with tools to determine the fundamental period of a signal with an application to estimating sarcomere length of a single cardiomyocyte from its microscopy image. The underlying theory of the method is described in a paper
+{{{
+Pearu Peterson, Mari Kalda, Marko Vendelin.
+Real-time Determination of Sarcomere Length of a Single Cardiomyocyte during Contraction.
+Submitted.
+}}}
+This page describes how to use the provided software.
