--- a/wiki/IOCBioSarcomereLength.wiki
+++ b/wiki/IOCBioSarcomereLength.wiki
@@ -18,3 +18,30 @@ Real-time Determination of Sarcomere Length of a Single Cardiomyocyte during Con
 Submitted.
 }}}
 This page describes how to use the provided software.
+
+= Usage from a C program =
+
+First, download `libfperiod` source code. The source code consists of three files:
+
+  * [libfperiod.c http://iocbio.googlecode.com/svn/trunk/iocbio/fperiod/src/libfperiod.c] - source code to be compiled and linked with your C program
+  * [libfperiod.h http://iocbio.googlecode.com/svn/trunk/iocbio/fperiod/src/libfperiod.h] - header file to be included
+  * [demo.c http://iocbio.googlecode.com/svn/trunk/iocbio/fperiod/src/demo.c] - demo code illustrating the basic usage of determining the fundamental period of a sine function.
+
+Second, study the demo program above that shows how to call the `iocbio_fperiod` function from your C program. Here follows an example session:
+{{{
+$ cc demo.c libfperiod.c -o demo -lm
+$ ./demo 20 5.4
+Signal definition: f[i]=sin(2*pi*i/5.400000), i=0,1,..,19
+Number of repetitive patterns in the signal=3.703704
+Detrend algorithm is disabled
+Expected  fundamental period=5.400000
+Estimated fundamental period=5.389328
+Relative error of the estimate=0.197630%
+}}}
+
+The `libfperiod` API exposes the following functions to users (see `libfperiod.h` for C definitions):
+
+  * iocbio_fperiod - compute fundamental period of a sequence
+  * iocbio_fperiod_cached - same as iocbio_fperiod but with extra cache argument that can be used to avoid malloc/free cycle in repetitive computations of the fundamental period.
+  * iocbio_objective - evaluate the similarity measure that defines the fundamental period of a signal sequence as its first non-zero minimum point
+  * iocbio_detrend - apply detrend algorithm to a signal sequence
