Edited wiki page IOCBioSarcomereLength through web user interface.

--- a/wiki/IOCBioSarcomereLength.wiki
+++ b/wiki/IOCBioSarcomereLength.wiki
@@ -1,14 +1,3 @@
-{{{
------------------------------------------------
-This page will be updated within couple of days
------------------------------------------------
-Please stay tuned.
-
-Pearu Peterson
-November 28, 2011
-
-}}}
-
 = Introduction =
 
 IOCBio provides a C library `libfperiod` and Python package `iocbio.fperiod` with tools to determine the fundamental period of a signal with an application to estimating sarcomere length of a single cardiomyocyte from its microscopy image. The underlying theory of the method is described in a paper
@@ -18,6 +7,7 @@ Real-time Determination of Sarcomere Length of a Single Cardiomyocyte during Con
 Submitted.
 }}}
 This page describes how to use the provided software.
+Please file all found bugs and feature requests to Issues.
 
 = Usage from a C program =
 
