--- a/wiki/IOCBioSarcomereLength.wiki
+++ b/wiki/IOCBioSarcomereLength.wiki
@@ -1,4 +1,6 @@
+#summary IOCBio Sarcomere length and fundamental period software
 #labels Featured
+
 = Introduction =
 
 IOCBio provides a C library `libfperiod` and Python package `iocbio.fperiod` with tools to determine the fundamental period of a signal with an application to estimating sarcomere length of a single cardiomyocyte from its microscopy image. The underlying theory of the method is described in a paper
